Add get logged in user endpoint
